<resources>
    <string name="app_name">BeaconObserver</string>
    <string name="action_settings">Settings</string>
    <string name="found">Found:</string>
    <string name="uuid">UUID:</string>
    <string name="major">Major:</string>
    <string name="minor">Minor:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="distance">Distance:</string>
    <string name="rssi">RSSI:</string>
    <string name="button_scan">Scan</string>
    <string name="button_stop_scan">Stop</string>
</resources>
