<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found"/>
        <TextView
            android:id="@+id/found_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uuid"/>
        <TextView
            android:id="@+id/uuid_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"/>
        <TextView
            android:id="@+id/major_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minor"/>
        <TextView
            android:id="@+id/minor_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"/>
        <TextView
            android:id="@+id/accuracy_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"/>
        <TextView
            android:id="@+id/distance_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rssi"/>
        <TextView
            android:id="@+id/rssi_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"/>
    </LinearLayout>

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scanButtonCallback"
        android:text="@string/button_scan" />

</LinearLayout>
